<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nu.educom.rvt</groupId>
  <artifactId>J2EE</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>J2EE Maven Webapp</name>
  <!-- FIXME change it to the project's website -->
  <url>http://voortgang.educom.nu</url>


  <dependencies>
  	<dependency>
  		<groupId>org.glassfish.jersey.bundles</groupId>
  		<artifactId>jaxrs-ri</artifactId>
  		<version>2.16</version>
  	</dependency>
  	
  	<dependency>
	    <groupId>org.mindrot</groupId>
	    <artifactId>jbcrypt</artifactId>
	    <version>0.4</version>
	</dependency>
  	
  	
  	<dependency>
  		<groupId>one.util</groupId>
  		<artifactId>streamex</artifactId>
  		<version>0.7.3</version>
	</dependency>

  	<dependency>
	    <groupId>javax.activation</groupId>
	    <artifactId>activation</artifactId>
	    <version>1.1.1</version>
	</dependency>
	
	<dependency>
        <groupId>com.owlike</groupId>
        <artifactId>genson</artifactId>
        <version>0.99</version>
    </dependency>
  	
  	<dependency>
  		<groupId>org.glassfish.jersey.media</groupId>
  		<artifactId>jersey-media-json-jackson</artifactId>
  		<scope>runtime</scope>
  		<version>2.16</version>
  	</dependency>
  	
  	<dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.4.1</version>
    </dependency>

    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>2.4.1</version>
    </dependency>

    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.4.1</version>
    </dependency>
  	
  	<dependency>
	  <groupId>com.fasterxml.jackson.jaxrs</groupId>
	  <artifactId>jackson-jaxrs-json-provider</artifactId>
	  <version>2.4.1</version>
	</dependency>
	
  	
  	<dependency>
	    <groupId>javax.xml.bind</groupId>
	    <artifactId>jaxb-api</artifactId>
	    <version>2.3.0</version>
	</dependency>
	
	<dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>5.2.6.Final</version>
    </dependency>
 
    <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.11</version>
    </dependency>
    
    <dependency>
	    <groupId>org.glassfish.jersey.containers</groupId>
	    <artifactId>jersey-container-grizzly2-http</artifactId>
	    <version>2.16</version>
	</dependency>
    
    <dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-api</artifactId>
	    <version>2.6.1</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	    <version>2.6.1</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jaxrs -->
<dependency>
    <groupId>org.jboss.resteasy</groupId>
    <artifactId>resteasy-jaxrs</artifactId>
    <version>3.13.2.Final</version>
</dependency>
	
	<dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.5.2</version>
	   <scope>test</scope>
    </dependency>
	
	<dependency>
        <groupId>org.hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
        <version>2.5.1</version>
        <scope>test</scope>
    </dependency>

  </dependencies>
  
  <build>
  	<finalName>J2EE</finalName>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>2.5.1</version>
  			<inherited>true</inherited>
  			<configuration>
  				<source>11</source>
  				<target>11</target>
  			</configuration>
  		</plugin>
  		
  		<!--<plugin>
	    	<artifactId>maven-assembly-plugin</artifactId>
		    <executions>
		      <execution>
		        <phase>package</phase>
		        <goals>
		          <goal>single</goal>
		        </goals>
		      </execution>
		    </executions>
		    <configuration>
		      <archive>
		        <manifest>
		          <addClasspath>true</addClasspath>
		          <mainClass>nu.educom.rvt.rest.Main</mainClass>
		        </manifest>
		      </archive>
		      <descriptorRefs>
		        <descriptorRef>jar-with-dependencies</descriptorRef>
		      </descriptorRefs>
		    </configuration>
	  	</plugin> -->
	  	<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-shade-plugin</artifactId>
		    <version>2.3</version>
		    <configuration>
		        <createDependencyReducedPom>true</createDependencyReducedPom>
		        <filters>
		            <filter>
		                <artifact>*:*</artifact>
		                <excludes>
		                    <exclude>META-INF/*.SF</exclude>
		                    <exclude>META-INF/*.DSA</exclude>
		                    <exclude>META-INF/*.RSA</exclude>
		                </excludes>
		            </filter>
		        </filters>
		    </configuration>
		    <executions>
		        <execution>
		            <phase>package</phase>
		            <goals>
		                <goal>shade</goal>
		            </goals>
		            <configuration>
		                <transformers>
		                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
		                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
		                        <mainClass>nu.educom.rvt.rest.Main</mainClass>
		                    </transformer>
		                </transformers>
		            </configuration>
		        </execution>
		    </executions>
		</plugin> 
  	</plugins>
  </build>
  
  <properties>
  	<jersey.version>2.16</jersey.version>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
</project>
